kuber/backend-ser.yaml
apiVersion: v1
kind: Service
metadata:
  name: ration-backend-service
spec:
  selector: 
    app: ration-backend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
